# PitAI

./: README.md  app.py  data_core.py  data_handler.py  data_pipeline.py  main.py  model_engine.py  model_inference.py  models.py  pyproject.toml  requirements.txt  run_e2e.py  scratch_api.py  test_fastf1.py  test_openf1.py
cache_data/: drivers_9118.pkl  drivers_9165.pkl  drivers_9221.pkl  drivers_9480.pkl  drivers_9488.pkl  drivers_9496.pkl  drivers_9590.pkl  drivers_9644.pkl  drvno_7783_PIA.pkl  drvno_9541_RUS.pkl  laps_11234_ALB.pkl  laps_11234_ALO.pkl  laps_11234_ANT.pkl  laps_11234_BEA.pkl  laps_11234_BOR.pkl  laps_11234_BOT.pkl  laps_11234_COL.pkl  laps_11234_GAS.pkl  laps_11234_HAD.pkl  laps_11234_HAM.pkl  laps_11234_HUL.pkl  laps_11234_LAW.pkl  laps_11234_LEC.pkl  laps_11234_LIN.pkl  laps_11234_OCO.pkl  laps_11234_PER.pkl  laps_11234_PIA.pkl  laps_11234_RUS.pkl  laps_11234_SAI.pkl  laps_11234_STR.pkl  laps_11234_VER.pkl  laps_7779_ALB.pkl  laps_7779_ALO.pkl  laps_7779_BOT.pkl  laps_7779_DEV.pkl  laps_7779_GAS.pkl  laps_7779_HAM.pkl  laps_7779_HUL.pkl  laps_7779_LEC.pkl  laps_7779_MAG.pkl  (+1346 more)
f1_cache/: fastf1_http_cache.sqlite
tests/: conftest.py  test_data_core.py  test_models.py
