[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f1-merged"
version = "1.0.0"
description = "Merged F1 analysis project – OpenF1 + FastF1 data layer with ML modelling"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "fastf1>=3.0",
    "xgboost>=1.7",
    "torch>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "termcolor>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
